<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.camera.CameraActivity">

    <Button
        android:id="@+id/bt_camera"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/open_camera" />

    <Button
        android:id="@+id/bt_album"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery_choose" />

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginVertical="20dp"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone">

        <Button
            android:id="@+id/bt_yes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/ok" />

        <Button
            android:id="@+id/bt_no"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>