<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".ui.presentation.main.MainActivity">

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:textColor="@color/dark_blue"
        android:text="@string/location_title"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/location_gps"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="24sp" />

    <Button
        android:id="@+id/bt_detect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="16dp"
        android:text="@string/button_detect"
        android:textColor="@color/beige" />

    <TextView
        android:id="@+id/tv_landmarksNearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/dark_blue"
        android:text="@string/nearby_title"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_no_landmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/no_nearby"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_landmarksNearby_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/rv_landmarks_nearby_item"/>
</LinearLayout>